test/templates/should_fail/no_matching_task_output.jst

- name: foo
  input: bar.txt
  cmd: cat bar.txt 
